"Personalized content to ACJ"

--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Welcome to Bethany' Pie Shop!</title>
-    <meta name="author" content="Bethany's Pie Shop">
-    <meta name="description" content="Store front for Bethany's Pie Shop">
+    <title>Welcome to Alison's Coding Journey!</title>
+    <meta name="author" content="Alison's Coding Journey">
+    <meta name="description" content="CodeLou FEWD practice page">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
+    <h1>
+        Welcome to Alison's Coding Journey!
+    </h1>
+    <h2>
+        Watch me learn to code
+    </h2>
+    <p>
+      Alison is a student in the Code Louisville Front End Web Development program. This is a webpage where she will practice what she learns. <br>Hang on. It's going to be a wild ride!  
+    </p>
    
 </body>
 
