Removed inline styles and updated css

--- a/index.html
+++ b/index.html
@@ -14,22 +14,21 @@
     <header id="mainheader">
         <nav>
             <header>
-                <h1 style="text-align: left">Wecome to Alison's Coding Journey!</h1> 
+                <h1>Wecome to Alison's Coding Journey!</h1> 
             </header>
         </nav>
-
     </header>
 
     <div>
-        <aside id="leftmenu">
-            <img src="images/codingimages/codelogo.svg" width="500"; height="200"; />
+        <aside class="leftmenu">
+            <img src="images/codingimages/codelogo.svg" ; />
             <header>
-                <h4 style="text-align: center;">Browse</h4>
+                <h4>Browse</h4>
             </header>
             <input type="search" class="searchbox" placeholder="Search this website"; />
         </aside>
     
-        <main id="main">
+        <main class="main">
             <article>
                 <h2>Watch me learn how to build a website . . .</h2>
             <p>
@@ -43,11 +42,11 @@
             <br>
 
             <h3>Look, I can insert a photo here!&#10549;</h3>
-            <img src="images/alison/alison.jpg" width="300px" height="300px" />
+            <img src="images/alison/alison.jpg" />
 
             <figure>
                 <h4>... and here!&#10549;</h4> 
-                <img src="images/codingimages/womancoding.png" width="300px" alt= "Woman coding" />
+                <img src="images/codingimages/womancoding.png" alt= "Woman coding" />
                 <figcaption>She will learn to code in many languages!</figcaption>
             </figure>
 
