Practice with borders and margins

--- a/index.html
+++ b/index.html
@@ -31,25 +31,24 @@
         <main class="main">
             <article>
                 <h2>Watch me learn how to build a website . . .</h2>
-            <p>
-                Hello world! I'm a student in the <b>Code Louisville</b> program, in the <i>September 2021</i> 
-                Front End Web Development (aka, FEWD) cohort. FEWD is a beginner level course. The world of coding and web development is a
-                challenging but exciting detour along my career journey. I have been a teacher for most of my adult life, but this is not my first time 
-                attempting a career change. I got more than halfway through graphic design school back in the early 2000s, but ran out 
-                of money and had to stop. Learning to build websites allows me to dig some of those design skills up from the archives of this old brain.
-                It may take a minute, but I will get there . . .
-            </p>
-            <br>
+                <p>
+                    Hello world! I'm a student in the <b>Code Louisville</b> program, in the <i>September 2021</i> 
+                    Front End Web Development (aka, FEWD) cohort. FEWD is a beginner level course. The world of coding and web development is a
+                    challenging but exciting detour along my career journey. I have been a teacher for most of my adult life, but this is not my first time 
+                    attempting a career change. I got more than halfway through graphic design school back in the early 2000s, but ran out 
+                    of money and had to stop. Learning to build websites allows me to dig some of those design skills up from the archives of this old brain.
+                    It may take a minute, but I will get there . . .
+                </p>
+                <br>
 
-            <h3>Look, I can insert a photo here!&#10549;</h3>
-            <img src="images/alison/alison.jpg" />
+                <h3>Look, I can insert a photo here!&#10549;</h3>
+                <img src="images/alison/alison.jpg"/>
 
-            <figure>
-                <h4>... and here!&#10549;</h4> 
-                <img src="images/codingimages/womancoding.png" alt= "Woman coding" />
-                <figcaption>She will learn to code in many languages!</figcaption>
-            </figure>
-
+                <figure>
+                    <h4>... and here!&#10549;</h4> 
+                    <img src="images/codingimages/womancoding.png" alt= "Woman coding" />
+                    <figcaption>Now I know how to add borders!</figcaption>
+                </figure>
             </article>
     
             <footer>
